Rename tests , add javadoc to test and replace Junit with AssertJ(#234)
test names from `testThingDoesThing`() to
`it_handles_failures_gracefully`()