@@ -1,6 +1,6 @@
 package io.codemodder.plugins.maven.operator;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.File;
 import java.io.IOException;
@@ -11,7 +11,6 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.xml.stream.XMLStreamException;
 import org.dom4j.DocumentException;
 import org.junit.jupiter.api.Test;
@@ -21,8 +20,12 @@ import org.slf4j.LoggerFactory;
 final class POMOperatorDependencyQueryTest {
   private static final Logger LOGGER = LoggerFactory.getLogger(POMOperatorTest.class);
 
+  /**
+   * Tests whether queryDependency uses the safe query type and retrieves dependencies successfully.
+   * Ensures that dependencies are retrieved when a safe query type is used.
+   */
   @Test
-  void testBasicQuery()
+  void queryDependency_uses_safe_query_type_successfully()
       throws DocumentException, IOException, URISyntaxException, XMLStreamException {
     ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
     context.withSafeQueryType();
@@ -31,11 +34,16 @@ final class POMOperatorDependencyQueryTest {
 
     LOGGER.debug("Dependencies found: {}", dependencies);
 
-    assertTrue("Dependencies are not empty", dependencies != null && !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(dependencies != null && !dependencies.isEmpty()).isTrue();
   }
 
+  /**
+   * Tests queryDependency for a broken POM, expecting no dependencies. Verifies that the query for
+   * a broken POM returns an empty list of dependencies.
+   */
   @Test
-  void testFailedSafeQuery()
+  void queryDependency_for_broken_pom_returns_no_dependencies()
       throws DocumentException, IOException, URISyntaxException, XMLStreamException {
     ProjectModelFactory context =
         ProjectModelFactory.load(getClass().getResource("pom-broken.xml"));
@@ -43,24 +51,32 @@ final class POMOperatorDependencyQueryTest {
 
     Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
-    assertTrue("Dependencies are empty", dependencies.isEmpty());
+    // "Dependencies are empty"
+    assertThat(dependencies).isEmpty();
   }
 
+  /**
+   * Tests whether queryDependency uses available dependency query commands successfully. Verifies
+   * that the query uses available dependency query commands and returns non-empty dependencies.
+   */
   @Test
-  void testAllQueryTypes()
-      throws DocumentException, IOException, URISyntaxException, XMLStreamException {
+  void queryDependency_uses_available_dependency_query_commands_successfully()
+      throws DocumentException,
+          IOException,
+          URISyntaxException,
+          XMLStreamException,
+          ClassNotFoundException,
+          InstantiationException,
+          IllegalAccessException {
     String[] pomFiles = {"pom-1.xml", "pom-3.xml"};
     for (String pomFile : pomFiles) {
       for (Pair<QueryType, String> chain : CommandChain.AVAILABLE_DEPENDENCY_QUERY_COMMANDS) {
         String commandClassName = "io.codemodder.plugins.maven.operator." + chain.getSecond();
 
         List<Command> commandListOverride = new ArrayList<>();
-        try {
-          Command command = (Command) Class.forName(commandClassName).newInstance();
-          commandListOverride.add(command);
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
-          e.printStackTrace();
-        }
+
+        Command command = (Command) Class.forName(commandClassName).newInstance();
+        commandListOverride.add(command);
 
         ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource(pomFile));
         context.withSafeQueryType();
@@ -68,24 +84,30 @@ final class POMOperatorDependencyQueryTest {
         Collection<Dependency> dependencies =
             POMOperator.queryDependency(context.build(), commandListOverride);
 
-        assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+        // "Dependencies are not empty"
+        assertThat(!dependencies.isEmpty()).isTrue();
       }
     }
   }
 
+  /**
+   * Tests whether queryDependency uses a temporary directory successfully. Verifies that the query
+   * uses a temporary directory and returns non-empty dependencies.
+   */
   @Test
-  void testTemporaryDirectory()
+  void queryDependency_uses_temporary_directory_successfully()
       throws IOException, DocumentException, URISyntaxException, XMLStreamException {
 
     File tempDirectory = new File("/tmp/mvn-repo-" + System.currentTimeMillis() + ".dir");
 
-    assertFalse("Temp Directory does not exist initially", tempDirectory.exists());
-    assertEquals(
-        "There must be no files",
-        tempDirectory.list() != null
-            ? (int) Files.list(tempDirectory.toPath()).filter(Files::isDirectory).count()
-            : 0,
-        0);
+    // "Temp Directory does not exist initially"
+    assertThat(tempDirectory).doesNotExist();
+    // "There must be no files"
+    assertThat(
+            tempDirectory.list() != null
+                ? (int) Files.list(tempDirectory.toPath()).filter(Files::isDirectory).count()
+                : 0)
+        .isZero();
 
     ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
     context.withSafeQueryType();
@@ -95,14 +117,22 @@ final class POMOperatorDependencyQueryTest {
 
     LOGGER.debug("Dependencies found: " + dependencies);
 
-    assertTrue("Dependencies are not empty", dependencies != null && !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(dependencies != null && !dependencies.isEmpty()).isTrue();
 
-    assertTrue("Temp Directory ends up existing", tempDirectory.exists());
-    assertTrue("Temp Directory is a directory", tempDirectory.isDirectory());
+    // "Temp Directory ends up existing"
+    assertThat(tempDirectory).exists();
+    // "Temp Directory is a directory"
+    assertThat(tempDirectory).isDirectory();
   }
 
+  /**
+   * Tests whether queryDependency uses a temporary directory and offline mode successfully.
+   * Verifies that the query uses a temporary directory and offline mode, returning non-empty
+   * dependencies.
+   */
   @Test
-  void testTemporaryDirectoryAndFullyOffline()
+  void queryDependency_uses_temporary_directory_and_offline_mode_successfully()
       throws IOException, DocumentException, URISyntaxException, XMLStreamException {
 
     Path tempDirectory = Files.createTempDirectory("mvn-repo");
@@ -115,11 +145,16 @@ final class POMOperatorDependencyQueryTest {
 
     LOGGER.debug("Dependencies found: " + dependencies);
 
-    assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
   }
 
+  /**
+   * Tests whether queryDependency handles a synthetic dependency. Verifies the handling of
+   * synthetic dependencies in the query.
+   */
   @Test
-  void testOnSyntheticDependency() throws Exception {
+  void queryDependency_handles_synthetic_dependency() throws Exception {
     Path tempDirectory = Files.createTempDirectory("mvn-repo");
 
     Path tempPom = tempDirectory.resolve("pom.xml");
@@ -159,19 +194,19 @@ final class POMOperatorDependencyQueryTest {
 
     LOGGER.debug("Dependencies found: " + dependencies);
 
-    assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
 
-    assertTrue(
-        "Random name matches",
-        dependencies.stream()
-            .collect(Collectors.toList())
-            .get(0)
-            .getArtifactId()
-            .equals(randomName));
+    // "Random name matches"
+    assertThat(dependencies.stream().toList().get(0).getArtifactId()).isEqualTo(randomName);
   }
 
+  /**
+   * Tests queryDependency handles a composite synthetic dependency. Verifies the handling of
+   * composite synthetic dependencies in the query.
+   */
   @Test
-  void testOnCompositeSyntheticDependency() throws Exception {
+  void queryDependency_handles_composite_synthetic_dependency() throws Exception {
     Path tempDirectory = Files.createTempDirectory("mvn-repo");
 
     Path tempParentPom = tempDirectory.resolve("pom-parent.xml");
@@ -247,19 +282,21 @@ final class POMOperatorDependencyQueryTest {
 
     LOGGER.debug("Dependencies found: " + dependencies);
 
-    assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
 
-    assertTrue(
-        "Random name matches",
-        dependencies.stream()
-            .collect(Collectors.toList())
-            .get(0)
-            .getArtifactId()
-            .equals(randomName));
+    // "Random name matches"
+    assertThat(dependencies.stream().toList().get(0).getArtifactId()).isEqualTo(randomName);
   }
 
+  /**
+   * Tests queryDependency handles composite incomplete synthetic dependency but with a parser.
+   * Verifies the handling of composite incomplete synthetic dependencies with a parser in the
+   * query.
+   */
   @Test
-  void testOnCompositeSyntheticDependencyIncompleteButWithParser() throws Exception {
+  void queryDependency_handles_composite_incomplete_synthetic_dependency_but_with_parser()
+      throws Exception {
     Path tempDirectory = Files.createTempDirectory("mvn-repo");
     Path tempPom = tempDirectory.resolve("pom.xml");
     String randomName = "random-artifact-" + System.currentTimeMillis();
@@ -316,7 +353,8 @@ final class POMOperatorDependencyQueryTest {
 
     LOGGER.debug("Dependencies found: {}", dependencies);
 
-    assertTrue("Dependencies are empty", !dependencies.isEmpty());
+    // "Dependencies are empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
 
     Dependency foundDependency =
         dependencies.stream()
@@ -327,7 +365,8 @@ final class POMOperatorDependencyQueryTest {
             .findAny()
             .orElse(null);
 
-    assertTrue("There's a dependency with managed-version", foundDependency != null);
+    // "There's a dependency with managed-version",
+    assertThat(foundDependency).isNotNull();
   }
 
   private List<Command> getCommandListFor(String... names) {
@@ -348,8 +387,12 @@ final class POMOperatorDependencyQueryTest {
     return commandList;
   }
 
+  /**
+   * Tests queryDependency handles offline mode. Verifies the behavior of dependency retrieval in
+   * offline mode.
+   */
   @Test
-  void testOfflineQueryResolution() throws Exception {
+  void queryDependency_handles_offline_mode() throws Exception {
     Path tempDirectory = Files.createTempDirectory("mvn-repo");
     Path pomFilePath =
         Paths.get(getClass().getResource("nested/child/pom/pom-3-child.xml").toURI());
@@ -362,6 +405,7 @@ final class POMOperatorDependencyQueryTest {
 
     LOGGER.debug("Dependencies found: {}", dependencies);
 
-    assertTrue("Dependencies are empty", dependencies.isEmpty());
+    // "Dependencies are empty"
+    assertThat(dependencies).isEmpty();
   }
 }
